# thingino-cloner

./: .gitignore  1  BINARY_CORRELATION_FEATURE.md  CMakeLists.txt  README.md  SESSION_SUMMARY.md  USB_CAPTURE_FRAMEWORK_SUMMARY.md  WORKFLOW_DIAGRAM.md  WRITE_IMPLEMENTATION_SUMMARY.md  a1.txt  analyze_core64_strace.sh  analyze_erase_protocol.sh  analyze_vendor_ltrace.sh  brick.txt  capture_core64_strace.sh  capture_our_write.sh  capture_vendor_ltrace.sh  capture_vendor_strace.sh  extract_ddr_from_pcap.py  extract_handshakes.py  log-58a0c6fdc5a43aff27452fd697a032f1f5b83ac4.txt  log-t20.txt  log.txt  log2.txt  t20.txt  vendor_write_sequence.c  vendor_write_sequence.py  verify_crc.py
build-release/linux/: CMakeCache.txt  Makefile  cmake_install.cmake  test_binary_builder  test_config_database  test_ddr_generator  test_ddr_integration  test_ddr_mapping_analysis  test_ddr_multiplechip  test_ddr_reference_analysis  test_ddrc_analysis  test_txx_mapping_analysis
build-release/windows/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/toolchains/: mingw-w64-x86_64.cmake
docs/: DDR_INTEGRATION_SUMMARY.md  EMBEDDED_CONFIGS.md  EMBEDDED_CONFIG_SUMMARY.md  USB_CAPTURE_FRAMEWORK.md
flash_erase_analysis/: erase_packets.txt
include/: flash_descriptor.h  platform_compat.h  thingino.h
references/: ddr_compiler_final.py
references/cloner-2.5.43-ubuntu_thingino/vendor_ltrace/: vendor_console_20251110_073359.txt  vendor_console_20251110_074139.txt  vendor_console_20251110_074256.txt  vendor_console_20251110_074616.txt  vendor_console_20251110_074723.txt  vendor_ltrace_20251110_073359.txt  vendor_ltrace_20251110_074139.txt  vendor_ltrace_20251110_074256.txt  vendor_ltrace_20251110_074616.txt  vendor_ltrace_20251110_074723.txt
src/: bootstrap.c  main.c  test_binary_builder.c  test_config_database.c  test_ddr_generator.c  test_ddr_integration.c  utils.c
src/ddr/: crc32.c  crc32.h  ddr_binary_builder.c  ddr_binary_builder.h  ddr_config_database.c  ddr_config_database.h  ddr_controller.c  ddr_ctrl_txx.c  ddr_generator.c  ddr_types.h  t31zx_reference_ddr.h
src/firmware/: firmware_database.h  flash_descriptor.c  handshake.c  loader.c  writer.c  writer.h
src/usb/: device.c  manager.c  protocol.c
tools/: README.md  SMART_CAPTURE_UPDATE.md  analyze_usb_capture.py  analyze_write_operation.py  analyze_write_with_binary.py  build_packages.sh  capture_usb_traffic.sh  compare_usb_captures.py  identify_ingenic_device.sh  quick_write_analysis.sh  quick_write_analysis_with_binary.sh  test_framework.sh  test_write_with_capture.sh  write_sequence.py
tools/usb_captures/: capture_20251118_120210.pcap  capture_20251118_120351.pcap  our_write_20251119_030116.pcap  our_write_20251119_032225.pcap  our_write_20251119_032604.pcap  our_write_20251119_032912.pcap  our_write_20251119_033240.pcap  our_write_20251119_033936.pcap  our_write_trackA_20251119_035451.pcap  our_write_trackA_20251119_035901.pcap  our_write_trackA_20251119_042244.pcap
vendor_strace/: core64_console_20251110_075454.txt  core64_console_20251110_080504.txt  core64_strace_20251110_075454.txt  core64_strace_20251110_080504.txt
